crates/nebula-proto/tests/snapshots/messages__evt_chat_token_reasoning.snap
---
source: crates/nebula-proto/tests/messages.rs
expression: value
---
{
  "jsonrpc": "2.0",
  "method": "chat.token",
  "params": {
    "chat_id": "01K6P3Z8M4Q7X2V9B5N1C0D3EH",
    "reasoning": "17 * 23 = 391"
  },
  "proto_version": 1
}
