crates/nebula-proto/tests/snapshots/messages__evt_log_event.snap
---
source: crates/nebula-proto/tests/messages.rs
expression: value
---
{
  "jsonrpc": "2.0",
  "method": "log.event",
  "params": {
    "event": "model.call",
    "fields": {
      "predicted_n": 3,
      "profile": "standard",
      "prompt_blob": "sha256:9f86d081884c7d659a2feaa0c55ad015a3bf4f1b2b0b822cd15d6c15b0f00a08"
    },
    "level": "info",
    "span_id": "01K6P3Z8M4Q7X2V9B5N1C0D3EG",
    "target": "nebula_model::backend",
    "trace_id": "01K6P3Z8M4Q7X2V9B5N1C0D3EF",
    "ts": "2026-10-04T07:00:03.25Z"
  },
  "proto_version": 2
}
