crates/nebula-proto/tests/snapshots/messages__req_chat_cancel.snap
---
source: crates/nebula-proto/tests/messages.rs
expression: value
---
{
  "id": 4,
  "jsonrpc": "2.0",
  "method": "chat.cancel",
  "params": {
    "chat_id": "01K6P3Z8M4Q7X2V9B5N1C0D3EH"
  },
  "proto_version": 2
}
