crates/nebula-proto/tests/snapshots/messages__req_daemon_shutdown.snap
---
source: crates/nebula-proto/tests/messages.rs
expression: value
---
{
  "id": 2,
  "jsonrpc": "2.0",
  "method": "daemon.shutdown",
  "params": {},
  "proto_version": 1
}
