crates/nebula-proto/tests/snapshots/messages__req_daemon_status.snap
---
source: crates/nebula-proto/tests/messages.rs
expression: value
---
{
  "id": 1,
  "jsonrpc": "2.0",
  "method": "daemon.status",
  "params": {},
  "proto_version": 2
}
