crates/nebula-proto/tests/snapshots/messages__req_doctor_run.snap
---
source: crates/nebula-proto/tests/messages.rs
expression: value
---
{
  "id": 9,
  "jsonrpc": "2.0",
  "method": "doctor.run",
  "params": {},
  "proto_version": 1
}
